--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         console.log(e.key);
         pressed.push(e.key);
         pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length);
+        if(pressed.join('').includes(secretCode)) {
+          console.log('DING DING!');
+        }
         console.log(pressed);
       })
     </script>
