--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Key Detection</title>
+    <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
   </head>
   <body>
-    <script type="text/javascript">
+    <script>
       const pressed = [];
       const secretCode = 'joshlee';
 
@@ -16,6 +17,7 @@
         pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length);
         if(pressed.join('').includes(secretCode)) {
           console.log('DING DING!');
+          cornify_add();
         }
         console.log(pressed);
       })
